/* $Id: ChangeLog,v 1.2762 2005-03-27 09:38:39 sao2l02 Exp $ */
2005-03-27: Dietrich Teickner <dietrich_teickner@arcor   >
    - comctl32: o src\comctl32\listview.c
                  some resyncs with wine for flashfxp 3.02.
    - user32:   o src\user32\message.cpp
                  stop the recursive callback at SendMessageTimeoutA.
                  workaround for flashfxp 3.02, we can remove them,
                  if we have a better solution in src\comctl32\listview.c from wine.
2005-03-12: Dietrich Teickner <dietrich_teickner@arcor   >
    - shell32:  o src\shell32\shell32_main.c
                  some repairs for setup flashfxp 3.02.  
2005-03-02: Dietrich Teickner <dietrich_teickner@arcor   >
    - makefile: o new cleanrule for cleaning only maintargets (dll+exe) for faster switch in debugbuild.
                  with and without debuginfo. 
    - shell32:  o src\shell32\shell32_main.c
                  some resyncs with wine for setup flashfxp 3.02.  
    - advapi32: o src\advapi32\ADVAPI32.DEF
                  export some more funtions for setup flashfxp 3.02.  
2005-02-25: Dietrich Teickner <dietrich_teickner@arcor   >  
    - comctl32: o src\comctl32\listview.c
                  some resyncs, (2 rangechecks and others),
                  Recursion for the DoubleClickProblem with flashfxp.exe.
                  Without this, flashfxp will be every in the drag-mode (since 13.02.2004).
2005-02-15: Dietrich Teickner <dietrich_teickner@arcor   >  
    - kernel32: o src\kernel32\hmstd.cpp, hmthread.cpp
                  mppn.exe from "DSP Semiconductors Ltd. V7.2" writes 0xFFFFFFFF Bytes to stdout:
2005-02-12: Dietrich Teickner <dietrich_teickner@arcor   >  
    - kernel32: o src\kernel32\wintls.cpp
                  small regression.
    - ntdll       src\NTDLL\rtl.c, ntdll.def changes
                  RtlFillMemoryUlong, RtlInitializeCriticalSectionAndSpinCount
2005-02-08: Dietrich Teickner <dietrich_teickner@arcor   >  