@@ -1,4 +1,4 @@
-/* $Id: message.cpp,v 1.7 2005-03-27 09:39:11 sao2l02 Exp $ */
+/* $Id: message.cpp,v 1.8 2005-03-28 19:43:34 sao2l02 Exp $ */
 /*
  * Win32 window message APIs for OS/2
  *
@@ -13,7 +13,7 @@
  * Project Odin Software License can be found in LICENSE.TXT
  *
  */
-#define __T__
+
 #include <odin.h>
 #include <odinwrap.h>
 #include <os2sel.h>
@@ -217,14 +217,6 @@ LRESULT WINAPI SendMessageTimeoutW( HWND hwnd, UINT msg, WPARAM wparam, LPARAM l
     return ret;
 }
 
-#ifdef __T__
-static int zIndex = -2;
-struct timeOutLink {
-     timeOutLink * lTol;
-     HWND cHwnd;
-     UINT cMsg;
-     };
-#endif
 
 /***********************************************************************
  *		SendMessageTimeoutA  (USER32.@)
@@ -255,37 +247,6 @@ LRESULT WINAPI SendMessageTimeoutA( HWND hwnd, UINT msg, WPARAM wparam, LPARAM l
 
     if (dest_tid == GetCurrentThreadId())
     {
-#ifdef __T__
-        int saveLastError = GetLastError();
-        timeOutLink cTol = { NULL, hwnd, msg};
-        if (-2 == zIndex)
-        {
-          zIndex = TlsAlloc();
-          SetLastError(saveLastError);
-        } /* endif */
-        if (zIndex >= 0)
-        {
-          cTol.lTol = (timeOutLink*)TlsGetValue(zIndex);
-          if (cTol.lTol < &cTol) {
-             cTol.lTol = NULL;
-          } /* endif */
-          SetLastError(saveLastError);
-          if (cTol.lTol 
-          &&  (cTol.lTol->cHwnd == hwnd)
-          &&  (cTol.lTol->cMsg == msg))
-          {
-            result = 0;
-          } else
-          {
-            TlsSetValue(zIndex,(LPVOID)&cTol);
-            SetLastError(saveLastError);
-            result = call_window_proc( hwnd, msg, wparam, lparam, FALSE );
-            saveLastError = GetLastError();
-            TlsSetValue(zIndex,(LPVOID)cTol.lTol);
-            SetLastError(saveLastError);
-          } /* endif */
-        } else
-#endif
         result = call_window_proc( hwnd, msg, wparam, lparam, FALSE );
         ret = 1;
     }
